<resources>
    <string name="app_name">MovieFrumy</string>
    <string name="menu_favorites_title">Избранное</string>
    <string name="menu_settings_title">Настройки</string>
    <string name="menu_watch_later_title">Посмотреть позже</string>
    <string name="menu_home_title_text">Главная</string>
    <string name="list_is_empty">Список пуст!</string>
    <string name="popular">Популярные</string>
    <string name="top_rated">Топ</string>
    <string name="upcoming">Скоро</string>
    <string name="playing">В кинотеатрах</string>
    <string name="english">English</string>
    <string name="russian">Russian</string>
    <string name="menu_settings_title_text">Настройки</string>
    <string name="radio_button_popular">Популярные</string>
    <string name="radio_button_top_rated">Лучшие</string>
    <string name="radio_button_upcoming">Скоро в кино</string>
    <string name="radio_button_playing">В кинотеатрах</string>
    <string name="radio_group_header">Показать сначало</string>
    <string name="permission_storage">Нет разрешения. Пожалуйста, предоставьте разрешение</string>
    <string name="downloaded_to_gallery">"Сохранено в галерею"</string>
    <string name="open">В галерею</string>

    <string name="languages_selection_header">Выбор языка</string>
    <string-array name="languages">
        <item>@string/english</item>
        <item>@string/russian</item>
    </string-array>
    <string name="filter_string_name">Фильтр</string>
    <string name="filter_header">Фильтры</string>
    <string name="apply">Подтвердить</string>
</resources>