<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/genres_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/radio_group"
        tools:listitem="@layout/genre_item"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:spanCount="5"
        android:layout_margin="8dp" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/genres_list"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/apply">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:layout_margin="8dp"
            android:textStyle="bold"
            android:textSize="25sp"
            android:text="@string/radio_group_header"/>

        <RadioButton
            android:id="@+id/radio_popular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_margin="16dp"
            android:layoutDirection="rtl"
            android:text="@string/radio_button_popular"
            android:textAlignment="textStart"
            android:textSize="22sp"
            android:textStyle="bold"/>
        <LinearLayout
            android:id="@+id/div_1"
            android:layout_width="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_height="1dp"
            android:background="@color/grey"
            android:orientation="horizontal" />
        <RadioButton
            android:id="@+id/radio_top_rated"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/radio_button_top_rated"
            android:layoutDirection="rtl"
            android:textAlignment="textStart"
            android:layout_gravity="start"
            android:textSize="22sp"
            android:textStyle="bold"/>
        <LinearLayout
            android:id="@+id/div_2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:orientation="horizontal"
            android:layout_marginStart="10dp"
            android:background="@color/grey"
            android:layout_marginEnd="10dp" />
        <RadioButton
            android:id="@+id/radio_upcoming"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/radio_button_upcoming"
            android:layoutDirection="rtl"
            android:textAlignment="textStart"
            android:layout_gravity="start"
            android:textSize="22sp"
            android:textStyle="bold"/>
        <LinearLayout
            android:id="@+id/div_3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:orientation="horizontal"
            android:layout_marginStart="10dp"
            android:background="@color/grey"
            android:layout_marginEnd="10dp" />
        <RadioButton
            android:id="@+id/radio_now_playing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/radio_button_playing"
            android:layoutDirection="rtl"
            android:textAlignment="textStart"
            android:layout_gravity="start"
            android:textSize="22sp"
            android:textStyle="bold"/>
    </RadioGroup>

    <Button
        android:padding="10dp"
        android:id="@+id/apply"
        android:layout_width="200dp"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radio_group"
        android:text="@string/apply"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="20dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>